lib/tests/fixtures/compiler/parser/illegal_class_def.baseline
Error: illegal_class_def.pp:3:5: classes can only be defined at top-level or inside another class.
  class bar
  ^~~~~~~~~
